# elt-ai-system

./: .env  .gitignore  README.md  docker-compose.yaml  get_airflow_compose.sh  pyproject.toml
airflow/: Dockerfile  requirements.txt
airflow/dags/: 1_laptop_dag.py  d1_laptop_dag.py  d2_machine_learning_dag.py
airflow/includes/1_laptop/: Dockerfile  extract.sh  ingest.py  kaggle.json  requirements.txt
airflow/includes/i1_laptop_ingest/: Dockerfile  ingest.py  requirements.txt
airflow/includes/i2_machine_learning/: Dockerfile  data_pipeline.py  requirements.txt  train.py
ml_model/: model.pt
ml_project_dbt/: Dockerfile  dbt_project.yml  profiles.yml
ml_project_dbt/models/: laptop_dim.sql
ml_project_dbt/models/example/: my_first_dbt_model.sql
notebooks/: EDA.ipynb  requirements.txt
tests/1_laptops/: test_ingest.py
