[tool.poetry]
name = "elt-project"
version = "0.1.0"
description = ""
authors = ["tomaszbk-pc <zubik.tomas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.12"
apache-airflow = "2.7"
dbt-postgres = "^1.7.4"
apache-airflow-providers-docker = "^3.9.1"
apache-airflow-providers-postgres = "^5.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
